--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,34 @@
 <body>
 
     <div id="container">
-        <div class="title-text"><span class="title-icon">👋🏻</span> Hello Urvashi... </div>
-        <div class="detail-text">
-            <p>
-                Meri pyaari bubu<span class="title-icon">❤️</span> amidst all the emojis in my heart, you're the real <span class="title-icon">😍</span>.<br><br> Wanna be my partner in this wild journey of life and make every moment lit<span class="title-icon">🔥</span> together?
-            </p>
+        <div id="wrapper1">
+            <div class="title-text"><span class="title-icon">👋🏻</span> Hello Urvashi... </div>
+            <div class="detail-text">
+                <p>
+                    Meri pyaari bubu<span class="title-icon">❤️</span> amidst all the emojis in my heart, you're the real <span class="title-icon">😍</span>.<br> 
+                    My partner in this wild journey of life, let's make every moment lit<span class="title-icon">🔥</span> together<span class="title-icon">😘</span>. <br>
+                    Will you go on a date with me<span class="title-icon">😍</span>?
+                </p>
+            </div>
+            <form id="dateForm">
+                <div class="input-box">
+                    <label class="detail-text" for="dateInput">What's that special day  <span class="title-icon">🥰</span></label>
+                    <input class="detail-text-input" type="date" id="dateInput" placeholder="dd-mm-yyyy" name="dateInput" required>
+                </div>
+                <div class="input-box">
+                    <label class="detail-text" for="messageInput">Your lovely words<span class="title-icon">📜</span> </label>
+                    <textarea class="detail-text-input" type="textbox" id="messageInput" name="messageInput" placeholder="Your Message Goes here..." required></textarea>
+                </div>
+                <div class="button-container">
+                    <button class="button" type="submit" id="sendEmailButton">Yes</button>
+                    <button class="button random-element" type="button">No</button>
+                </div>
+            </form>
         </div>
-        <form id="dateForm">
-            <label for="dateInput">Enter Date:</label>
-            <input type="date" id="dateInput" name="dateInput">
-            <br>
-            <label for="messageInput">Enter messageInput:</label>
-            <input type="textbox" id="messageInput" name="messageInput">
-            <br>
-            <button type="submit">Send Email</button>
-        </form>
-        <div class="button-container">
-            <div class="button" id="sendEmailButton">Yes</div>
-            <div class="button random-element">No</div>
+        <div id="wrapper2">
+            <div class="animation-container">
+                
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
