hidden emails by env variable and project finish

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,9 @@
             </form>
         </div>
         <div id="wrapper2">
+            <div class="title-text"><span class="title-icon">😘</span> I love you Bubu <span class="title-icon">❤️</span></div>
             <div class="animation-container">
-                
+                <img src="bubu_dudu_dance.gif" alt="">
             </div>
         </div>
     </div>
